# active-object

./: CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yml
benchmark/: CMakeLists.txt  thread_executor_benchmarks.cpp
include/active/: thread_executor.hpp  unique_function.hpp
src/: CMakeLists.txt  active_object.hpp  message_queue.hpp  universal_call.hpp
test/: CMakeLists.txt  active_object_tests.cpp  dummy.h  exception_safety.cpp  exception_safety.h  main.cpp  message_queue_tests.cpp  thread_executor_tests.cpp  unique_function_tests.cpp
